# mcp_based

./: .gitignore  README.md  demo_client.py  demo_server.py  pyproject.toml
mcp-client/: client.py  ollama_client.ipynb
mcp-news-server/: news-server.py
mcp-sqlite-server/: sqlite-server.py
