[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi-mcp>=0.3.4",
    "google-genai>=1.16.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.5",
    "linkup-sdk>=0.2.5",
    "llama-index>=0.12.36",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-tools-mcp>=0.1.3",
    "mcp[cli]>=1.8.0",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.0.15",
    "praisonaiagents[llm]>=0.0.83",
    "requests>=2.32.3",
]
